objects/Time_Card_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account_Project_Task__c</fullName>
        <formula>Project3__r.Quote__r.Account_Lookup__c &amp; &quot; / &quot; &amp; Project3__r.Name &amp; &quot; / &quot; &amp;  PS_Task3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account/ Project / Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Fri__c</fullName>
        <label>Notes Fri</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Mon__c</fullName>
        <label>Notes Mon</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Sat__c</fullName>
        <label>Notes Sat</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Sun__c</fullName>
        <label>Notes Sun</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Thu__c</fullName>
        <label>Notes Thu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Tue__c</fullName>
        <label>Notes Tue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Wed__c</fullName>
        <label>Notes Wed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PS_Task3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Task3</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Time Card Lines</relationshipLabel>
        <relationshipName>Time_Card_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Project3</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Time Card Lines</relationshipLabel>
        <relationshipName>Time_Card_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thu__c</fullName>
        <label>Thu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Card__c</fullName>
        <label>Time Card</label>
        <referenceTo>Time_Card__c</referenceTo>
        <relationshipLabel>Time Card Lines</relationshipLabel>
        <relationshipName>Time_Card_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Card Line</label>
    <nameField>
        <label>Time Card Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Card Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>